# src/api/ambulance-wl/models/index.ts
@@ -1,4 +1,3 @@
 /* tslint:disable */
 /* eslint-disable */
 export * from './Questionnaire';
-export * from './QuestionnaireQuestion';
